--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Go 1.20
         uses: actions/setup-go@v2
         with:
-          go-version: 1.20
+          go-version: '1.20'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
